@@ -48,7 +48,8 @@ struct nameseq
     unsigned int changed : 1;                   \
     unsigned int ignore_mtime : 1;              \
     unsigned int staticpattern : 1;             \
-    unsigned int need_2nd_expansion : 1
+    unsigned int need_2nd_expansion : 1;        \
+    unsigned int ignore_automatic_vars : 1
 
 struct dep
   {
