@@ -48,7 +48,7 @@ extern size_t max_pattern_dep_length;
 extern struct file *suffix_file;
 
 
-void count_implicit_rule_limits (void);
+void snap_implicit_rules (void);
 void convert_to_pattern (void);
 void install_pattern_rule (struct pspec *p, int terminal);
 void create_pattern_rule (const char **targets, const char **target_percents,
